testing services with inject and module

--- a/test/index.html
+++ b/test/index.html
@@ -4,6 +4,7 @@
 		<title>Mocha Spec Runner</title>
 		<link rel="stylesheet" type="text/css" href="bower_components/mocha/mocha.css">
 		<script type="text/javascript" src="bower_components/angular/angular.js"></script>
+
 	</head>
 	<body data-ng-app="AddressBook">
 		<div id="mocha"></div>
@@ -12,8 +13,8 @@
 		<script type="text/javascript" src="bower_components/chai/chai.js"></script>
 		<script>
 			mocha.setup('bdd');
-
 		</script>
+		<script type="text/javascript" src="bower_components/angular-mocks/angular-mocks.js"></script>
 
 		<script type="text/javascript" src="main.js"></script>
 		<script type="text/javascript" src="main.spec.js"></script>
